<resources>
    <string name="app_name">Baby Health</string>
    <string name="enter_here">Enter Here.</string>
    <string name="enter_your_childs_name">Enter Your Childs Name</string>
    <string name="continueBtn">Continue</string>
    <string name="taking_care_of_your_baby_s_health">BABY HEALTH</string>
    <string name="_6_years">6+ years</string>
    <string name="from_1_3_years">From 1–3 years</string>
    <string name="from_3_5_years">From 3–5 years</string>
    <string name="from_6_months_to_12_months">From 6 Months to 12 Months</string>
    <string name="choose_for_your_baby">Choose Age For Your Baby</string>
    <string name="continuebtn">Continue</string>
    <string name="choose_your_interests_for_your_child">Checked the following list</string>
    <string name="have_you_baby_received_vaccinations">Have you baby received vaccinations???</string>
    <string name="is_your_baby_sleeping_constantly">Is your baby sleeping constantly??</string>
    <string name="does_your_child_eat_well">Does your child eat well</string>
    <string name="submit_list">Submit List</string>
    <string name="continue3">Continue</string>
</resources>