<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/Purple"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">



    <ImageView
        android:layout_margin="50dp"
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="121dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/babygirl" />



    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_margin="30dp"
        android:textStyle="italic"
        android:text="@string/choose_for_your_baby"
        android:textColor="@color/darkPurple"
        android:textSize="25sp"
        />

<RadioGroup
android:layout_margin="30dp"
android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radiGroup">

    <RadioButton

        android:textSize="30sp"
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From Birth To 6 Months" />

    <RadioButton
        android:textSize="30sp"
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_6_months_to_12_months" />

    <RadioButton
        android:textSize="30sp"
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_1_3_years"  />

    <RadioButton
        android:textSize="30sp"
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_3_5_years" />

    <RadioButton
        android:textSize="30sp"
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_years" />





    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuebtn"
        android:id="@+id/continueBtn"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:onClick="Continue"
        android:textStyle="italic"

/>
</LinearLayout>